import javax.persistence.Entity;

@Entity
public class Castillo extends Lugar {

  private int cantidadTorres;
  private int cantidadMurallas;

}
